--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="flex f-aps">
       </a>
     </div>
-    <h1 class="headerText" id="wedate">Will You Be My Valentine, Bhoomi? 🥺</h1>
+    <h1 class="headerText" id="wedate">Will You Be My Valentine, Samiksha? 🥺</h1>
     <img class="image" src="https://github.com/NikhilMarko03/resources/blob/main/happy1.gif?raw=true" alt="heyy" id="mainImg" />
     <div class="flex" id="btns">
       <button
